Complete ReportsScreen: real data, dialogs, CSV export; refactor ReportManager for GUI